# abdev-benchmark

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  run_all_baselines.py  run_all_baselines.sh  run_all_models.py
.github/workflows/: ci.yml
baselines/ablang2_elastic_net/: pixi.toml  pyproject.toml
baselines/ablang2_elastic_net/src/ablang2_elastic_net/: model.py
baselines/ablang_ridge/: pixi.toml  pyproject.toml
baselines/ablang_ridge/src/ablang_ridge/: __init__.py  model.py  run.py
baselines/aggrescan3d/: README.md  pixi.toml  pyproject.toml
baselines/aggrescan3d/src/aggrescan3d/: __init__.py  __main__.py  model.py  predict.py  run.py
baselines/antifold/: README.md  pixi.toml  pyproject.toml
baselines/deepviscosity/: README.md  pixi.toml  pyproject.toml
baselines/esm2_ridge/: README.md  pixi.toml  pyproject.toml
baselines/esm2_ridge/src/esm2_ridge/: __init__.py  __main__.py  model.py  run.py
baselines/onehot_ridge/: README.md  pixi.toml
baselines/piggen/: README.md  pixi.toml  pyproject.toml
baselines/piggen/src/piggen/: model.py  run.py
baselines/random_predictor/: README.md  pixi.toml  pyproject.toml
baselines/random_predictor/src/random_predictor/: __init__.py  __main__.py  model.py  run.py
baselines/saprot_vh/: README.md  pixi.toml  pyproject.toml
baselines/tap_linear/: README.md  pixi.toml  pyproject.toml
baselines/tap_linear/src/tap_linear/: __init__.py  __main__.py  model.py  predict.py  run.py
baselines/tap_linear/test_outputs/: predictions.csv
baselines/tap_linear/test_outputs_heldout/: predictions.csv
baselines/tap_single_features/: README.md  pixi.toml  pyproject.toml
baselines/tap_single_features/src/tap_single_features/: __init__.py  __main__.py  model.py  predict.py  run.py
configs/: README.md  default.toml  esm2_tap_rf_only.toml  esm2_tap_ridge_only.toml  esm2_tap_xgb_only.toml  fast-only.toml
data/: README.md  heldout-set-sequences.csv  heldout-set-sequences.pkl
data/schema/: README.md
evaluation/: README.md  pixi.toml  pyproject.toml
evaluation/src/evaluation/: __init__.py  cli.py  metrics.py  validate.py
evaluation_results/: aggrescan3d_cv.csv  antifold_cv.csv  deepviscosity_cv.csv  random_predictor_cv.csv  saprot_vh_cv.csv  tap_linear_cv.csv  tap_single_features_cv.csv
libs/abdev_core/: README.md  pyproject.toml
libs/abdev_core/src/abdev_core/: __init__.py  base.py  cli.py  constants.py  evaluation_metrics.py  evaluation_validate.py  features.py  utils.py
models/ablang2_elastic_net/: README.md  pixi.toml  pyproject.toml
models/ablang2_elastic_net/src/ablang2_elastic_net/: __init__.py  model.py  run.py
models/aggrescan3d/: README.md  pyproject.toml
models/antifold/: README.md  pixi.toml  pyproject.toml
models/antifold/src/antifold/: __init__.py  run.py
models/deepsp_ridge/: README.md  pixi.toml  pyproject.toml
models/deepsp_ridge/src/deepsp_ridge/: __init__.py  __main__.py  feature_generator.py  model.py  run.py
models/deepviscosity/: README.md  pixi.toml
models/esm2_ridge/: README.md  pixi.toml  pyproject.toml
models/esm2_tap_rf/: README.md  pixi.toml  pyproject.toml
models/esm2_tap_rf/src/esm2_tap_rf/: __init__.py  __main__.py  model.py  run.py
models/esm2_tap_ridge/: README.md  pixi.toml  pyproject.toml
models/esm2_tap_xgb/: README.md  pixi.toml  pyproject.toml
models/moe_baseline/: AC-SINS_fold_features_updated_feature_selection.json  CHO_fold_features_updated_feature_selection.json  HIC_fold_features_updated_feature_selection.json  README.md  Titer_fold_features_updated_feature_selection.json  Tm2_fold_features_updated_feature_selection.json  pixi.toml  pyproject.toml
models/moe_baseline/src/moe_baseline/: __init__.py  __main__.py  model.py  run.py
models/moe_stabl_baseline/: README.md  build_stabl_features.ipynb  pixi.toml  pyproject.toml  stabl_feature_selection_results.pkl
models/moe_stabl_baseline/src/moe_stabl_baseline/: __init__.py  model.py  run.py  stabl_proxy.py
models/onehot_ridge/: README.md  pixi.toml  pyproject.toml
models/onehot_ridge/runs/my_run/: models.pkl
models/onehot_ridge/src/onehot_ridge/: __init__.py  run.py
models/piggen/: README.md
models/polyxpert/: .gitignore  README.md  pixi.toml  pyproject.toml
models/polyxpert/src/polyxpert/: __init__.py  __main__.py  model.py  run.py
models/propermab_linear/: README.md
models/random_predictor/: README.md  pixi.toml  pyproject.toml
models/saprot_vh/: README.md  pixi.toml
models/saprot_vh_vl/: README.md  pixi.toml  pyproject.toml
models/saprot_vh_vl/outputs/heldout/: predictions.csv
models/saprot_vh_vl/outputs/train/: predictions.csv
models/saprot_vh_vl/runs/my_run/: embeddings.npy  models.pkl
models/saprot_vh_vl/src/saprot_vh_vl/: __init__.py  model.py  run.py
models/ssh2/: README.md  pixi.toml  pyproject.toml
models/ssh2/src/ssh2/: __init__.py  __main__.py  model.py  run.py
models/ssh2/src/ssh2/codes/: CKSAAGP.py  checkFasta.py  readFasta.py  saveCode.py
models/tap_linear/: README.md  pixi.toml
notebooks/: README.md  gpda_cv_submission.csv  testset_submission.csv  tutorial_onehot_ridge.ipynb  tutorial_pIgGen.ipynb
outputs/evaluation/: ablang2_elastic_net_cv.csv  aggrescan3d_cv.csv  antifold_cv.csv  cisi2_cv.csv  deepsp_ridge_cv.csv  deepviscosity_cv.csv  esm2_ridge_cv.csv  esm2_tap_rf_cv.csv  esm2_tap_ridge_cv.csv  esm2_tap_xgb_cv.csv  moe_baseline_cv.csv  moe_stabl_baseline_cv.csv  onehot_ridge_cv.csv  piggen_cv.csv  polyxpert_cv.csv  random_predictor_cv.csv  saprot_vh_cv.csv  saprot_vh_vl_cv.csv  ssh2_cv.csv  tap_linear_cv.csv  tap_single_features_cv.csv
results/: metrics_all.csv
results/GDPa1/: Aggrescan3D - aggrescan_90_score.csv  Aggrescan3D - aggrescan_average_score.csv  (+2 more)
src/: evaluate.py  utils.py
tests/: README.md  debug_eval_diff.py  debug_predictions_samples.py  diagnose_differences.py  test_baseline_contract.py  test_baselines.py  test_config.json  test_evaluation_baseline.py  test_new_cv_evaluation.py  test_regression.py
(+713 files in other folders)
