[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluation"
version = "0.1.0"
description = "Evaluation module for antibody developability benchmark"
requires-python = ">=3.11"
dependencies = [
    "abdev-core",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

