[project]
name = "ablang2_elastic_net"
version = "0.1.0"
description = "ElasticNet regression on AbLang2 paired (VH|VL) mean-pooled embeddings"
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/ginkgobioworks/abdev-benchmark"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ablang_ridge" = ["*.txt", "*.json"]
