[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esm2_ridge"
version = "0.1.0"
description = "ESM2 Ridge baseline - Ridge regression on ESM2 two-chain embeddings"
requires-python = ">=3.11"
dependencies = [
    "abdev-core",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.9.0",
    "transformers>=4.30",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
