[project]
name = "random-predictor"
version = "0.1.0"
description = "Random Predictor baseline - generates random predictions"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "typer>=0.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
random_predictor = ["py.typed"]
