[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-single-features"
version = "0.1.0"
description = "TAP Single Features baseline - individual TAP features as direct predictors"
requires-python = ">=3.11"
dependencies = [
    "abdev-core",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
