[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abdev-core"
version = "0.1.0"
description = "Shared core library for antibody developability benchmark"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "typer>=0.9.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

