[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antifold"
version = "0.1.0"
description = "AntiFold baseline - antibody stability predictions"
requires-python = ">=3.11"
dependencies = [
    "abdev-core",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

