[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-baseline"
version = "0.1.0"
description = "MOE molecular descriptors baseline for antibody developability"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moe_baseline = ["*.json"]
