[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh2"
version = "0.1.0"
description = "SSH2 - CKSAAGP + SVM ensemble model for antibody hydrophobicity prediction"
requires-python = ">=3.11"
dependencies = [
    "abdev-core",
    "pandas>=2.0",
    "numpy>=1.24",
    "typer>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

